--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.datasource.initialization-mode=always
 
 # Set to true to allow Spring Boot to run schema.sql and data.sql automatically
 spring.datasource.continue-on-error=true
+spring.cache.ehcache.config=classpath:ehcache.xml
