--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_REPO_NAME: my-springboot-app
+    IMAGE_REPO_NAME: employee-service
     IMAGE_TAG: latest
-    AWS_ACCOUNT_ID: 123456789012
+    AWS_ACCOUNT_ID: 103373977831
     REGION: ap-south-1
 
 phases:
@@ -21,8 +21,10 @@ phases:
     commands:
       - echo Building Spring Boot jar
       - mvn package -DskipTests
+      - echo "Checking target folder contents"
+      - ls -lh target || true
       - echo Building Docker image
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG -f Dockerfile .
       - echo Tagging Docker image
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Pushing Docker image to ECR
@@ -30,4 +32,4 @@ phases:
 
 artifacts:
   files:
-    - target/*.jar
+    - target/app.jar
