--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
       - echo "Checking target folder contents"
       - ls -lh target || true
       - echo Building Docker image
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG -f Dockerfile .
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - echo Tagging Docker image
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Pushing Docker image to ECR
