--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,20 +10,14 @@ env:
 phases:
   install:
     runtime-versions:
-      java: corretto17
+      docker: 20
     commands:
-      - echo Installing Maven dependencies
-      - mvn install -DskipTests
       - echo Logging in to Amazon ECR
       - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com
 
   build:
     commands:
-      - echo Building Spring Boot jar
-      - mvn package -DskipTests
-      - echo "Checking target folder contents"
-      - ls -lh target || true
-      - echo Building Docker image
+      - echo Building Docker image with multi-stage build
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - echo Tagging Docker image
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
@@ -32,4 +26,4 @@ phases:
 
 artifacts:
   files:
-    - target/app.jar
+    - '**/*'
