--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,17 +11,16 @@ phases:
   install:
     runtime-versions:
       docker: 20
+      java: corretto17
     commands:
-      - echo Logging in to Amazon ECR
+      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com
 
   build:
     commands:
-      - echo Building Docker image with multi-stage build
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - echo Tagging Docker image
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - echo Pushing Docker image to ECR
+      - echo Building Docker image with multi-stage build...
+      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG .
+      - echo Pushing Docker image to ECR...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
 artifacts:
